# Kitchen-MCP-server

./: .gitignore  RestaurantMCP.py  pyproject.toml
Shared/: Settings.py
src/kitchen_mcp.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/restaurant_mcp/: __init__.py  server.py
src/shared/: APIRequest.py  Lifecycle.py  Logger.py  Settings.py  __init__.py
src/shared/models/: WaitressServiceModel.py
